@@ -1332,14 +1332,13 @@ replace restart {
 } if notVolatile(%1 %2),operandsNotRelated(%1 %2 %3)
 
 // applies to f.e. bug-607243.c
-// also check notVolatile %3, as it will return FALSE if it's @r%1
 replace {
-	mov	r%1,%2
-	mov	ar%1,%3
+	mov	%1,%2
+	mov	a%1,%3
 } by {
-	;	peephole 177.e	removed redundant mov
-	mov	ar%1,%3
-} if notVolatile %2 %3
+	;	peephole 177.e	removed redundant mov %1,%2
+	mov	a%1,%3
+} if notVolatile(%2), operandsNotRelated(%1 %3)
 
 replace {
 	mov	ar%1,%2
@@ -1375,6 +1374,16 @@ replace {
 	mov	r%1,a
 	;	peephole 177.i	optimized mov sequence
 	mov	r%2,a
+}
+
+replace {
+	mov	r%1,%2
+	mov	ar%3,r%1
+	mov	r%1,%4
+} by {
+	;	peephole 177.j	optimized mov sequence
+	mov	r%3,%2
+	mov	r%1,%4
 }
 
 replace {
